Implement Number Animations
-implement numberScroll animation for all relevant displays
-refactor InfoRow to not animate the whole row when a change occurs
-finish color implementation for dialog items

--- a/app/src/main/res/values/inventoryStrings.xml
+++ b/app/src/main/res/values/inventoryStrings.xml
@@ -28,7 +28,8 @@
     <string name = "silverLabel">%.2f SC</string>
     <string name = "copperLabel">%.2f CC</string>
 
-    <string name = "spentAmount">%s: %1d</string>
+    <string name = "spentLabel">Spent Amounts</string>
+    <string name = "spentAmount">%s:</string>
 
     <string name = "inventoryHeader">Inventory</string>
 
