--- a/app/src/main/res/values/psychicStrings.xml
+++ b/app/src/main/res/values/psychicStrings.xml
@@ -18,7 +18,7 @@
         <item>Matrix Powers</item>
     </string-array>
 
-    <string name = "potentialBonusLabel">+%1d Potential</string>
+    <string name = "potentialBonusLabel">Potential</string>
     <string name = "psyPointInput">%1d PP</string>
 
     <string-array name = "difficultyTable">
