Add Custom Characteristics to Data -allow the user to add a custom characteristic to their local file -create dialog for creating a custom Secondary Characteristic

--- a/app/src/main/res/values/toastAlerts.xml
+++ b/app/src/main/res/values/toastAlerts.xml
@@ -64,4 +64,6 @@
     <string name = "magicTiesRestriction">Magic Ties prevents getting Free Spells!</string>
 
     <string name = "needDisciplineMessage">You lack the Advantage to access the %s Discipline!</string>
+
+    <string name = "nameCustomSecondary">Please name your Secondary Ability</string>
 </resources>
