--- a/app/src/main/res/values/mainPageStrings.xml
+++ b/app/src/main/res/values/mainPageStrings.xml
@@ -3,6 +3,10 @@
     <string name = "newCharacterTitle">NEW CHARACTER</string>
     <string name = "loadCharacterTitle">LOAD CHARACTER</string>
     <string name = "deleteCharacterTitle">DELETE CHARACTER</string>
+
+    <string name = "editSecondariesTitle">Edit Custom Secondary Abilities</string>
+    <string name = "deleteSecondaryPrompt">Are you sure you want to delete %s?</string>
+
     <string name = "sharingTitle">Analytics Sharing</string>
 
     <string name = "newCharacterHeader">Save Character As:</string>
