Refactor Custom Secondary Save Method -change save method from one master file to a set of files in a unique directory -added check for duplicate secondaries

--- a/app/src/main/res/values/toastAlerts.xml
+++ b/app/src/main/res/values/toastAlerts.xml
@@ -65,5 +65,6 @@
 
     <string name = "needDisciplineMessage">You lack the Advantage to access the %s Discipline!</string>
 
-    <string name = "nameCustomSecondary">Please name your Secondary Ability</string>
+    <string name = "nameCustomSecondary">Please name your Secondary Ability!</string>
+    <string name = "duplicateCustomSecondary">There already exists a custom Secondary Ability with that name!</string>
 </resources>
