Refactor Items for New Custom Technique Data Structure -implement applying custom technique files to the BaseCharacter object -implement name check for during custom technique creation -implement new saving and loading method for this means of custom technique data storage -fix bad save/load data for custom techniques with state effects

--- a/app/src/main/res/values/toastAlerts.xml
+++ b/app/src/main/res/values/toastAlerts.xml
@@ -59,6 +59,8 @@
     <string name = "techLevelRestriction">Cannot take an effect of that level!</string>
     <string name = "techCostRestriction">Maximum technique cost exceeded!</string>
     <string name = "techMKRestriction">Technique would exceed character\'s limit!</string>
+    <string name = "emptyTechName">You must name your Technique!</string>
+    <string name = "duplicateTechName">There is already a custom technique with that name!</string>
 
     <string name = "needGiftMessage">You need The Gift in order to change this!</string>
     <string name = "magicTiesRestriction">Magic Ties prevents getting Free Spells!</string>
