Implement Character Detail Alert -create display for details on a character's class -create DropdownData object for use in OutlinedDropdown objects

--- a/app/src/main/res/values/archetypeStrings.xml
+++ b/app/src/main/res/values/archetypeStrings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name = "archetypeHead">Archetype:</string>
     <string name = "domineName">Domine</string>
     <string name = "fighterName">Fighter</string>
     <string name = "mysticName">Mystic</string>
