Design Class Detail Alert -implement spacing make alert look nicer -move class DetailButton to same row as the class OutlinedDropdown -create object to hold data for each dropdown's row -allow user to see freelancer bonus selections in class details -move Row composable outside of OutlinedDropdown object

--- a/app/src/main/res/values/detailStrings.xml
+++ b/app/src/main/res/values/detailStrings.xml
@@ -8,5 +8,7 @@
     <string name = "intelligenceMultiplier">Intelligence x %1d</string>
     <string name = "maintenanceAmount">1 every %1d</string>
 
+    <string name = "freelancerBonusHead">Selected Freelancer Bonuses</string>
+
     <string name = "detailFailure">Failed to show object details.</string>
 </resources>
