--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -58,6 +58,8 @@
         It costs the Freelancer only 20 DP to change class to any other Archetype, or vice versa (a fighter, for example could pay just 20 DP to become a Freelancer character).
     </string>
 
+    <string name = "freelancerEmptySelectionDetail">(No selection yet made)</string>
+
     <string name = "lifePointMultHead">Life Point Multiple:</string>
     <string name = "lifePointLevelHead">Life Points:</string>
     <string name = "initiativeHead">Initiative:</string>
@@ -115,5 +117,4 @@
 
     <string name = "zeonLabel">Zeon</string>
     <string name = "reducedCostHead">Reduced Costs</string>
-    <string name = "innateBonusHead">Innate Bonuses</string>
 </resources>
