Work on Changing Level of SBL Character -allow level change when appropriate DP is spent -only show taken levels and the next one to take -add character to SBL record when going to new level -refactor SBL character to sub-class of BaseCharacter -refactor default BaseCharacter to have the values previously initialized in a function -refactor how all primary and secondary characteristics are retrieved

--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -117,4 +117,7 @@
 
     <string name = "zeonLabel">Zeon</string>
     <string name = "reducedCostHead">Reduced Costs</string>
+
+    <string name = "failedLevelChangeTitle">Could Not Change Level</string>
+    <string name = "failedLevelChangeText">Current level\'s DP have not been appropriately spent and changing level cannot happen until then.</string>
 </resources>
