Proper Class Displays -show class difference between levels if one present -don't change class dropdown display for levels higher than 0

--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -69,6 +69,7 @@
     <string name = "zeonHead">Zeon:</string>
     <string name = "maMultHead">MA Multiple</string>
     <string name = "psyPointHead">Psychic Points:</string>
+    <string name = "classChangedNotice">Next Level\'s Class:</string>
 
     <string name = "combatAbilityHead">Combat Ability:</string>
     <string name = "magicAbilityHead">Supernatural Ability:</string>
