--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -128,5 +128,5 @@
     <string name = "primaryBonusPointReduction">-a primary characteristic\'s bonus (%s) is smaller than in a previous level</string>
     <string name = "combatPointMisuse">-points in combat abilities have not been appropriately spent</string>
     <string name = "combatInputPointReduction">-a combat item\'s value (%s) is smaller than in a previous level</string>
-
+    <string name = "secondaryInputPointReduction">-a secondary item\'s value (%s) is smaller than in a previous level</string>
 </resources>
