--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -129,4 +129,5 @@
     <string name = "combatPointMisuse">-points in combat abilities have not been appropriately spent</string>
     <string name = "combatInputPointReduction">-a combat item\'s value (%s) is smaller than in a previous level</string>
     <string name = "secondaryInputPointReduction">-a secondary item\'s value (%s) is smaller than in a previous level</string>
+    <string name = "natBonusNotDistributed">-all secondary natural bonuses have not been distributed</string>
 </resources>
