SBL Magic Stat Implementation -implement level saving for the Zeon Point, Magic Accumulation, and Magic Projection stats -fix bug with secondary DP display not correcting for class reduction

--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -133,4 +133,7 @@
     <string name = "natBonusNotDistributed">-all secondary natural bonuses have not been distributed</string>
     <string name = "kiPointReduction">-a ki point\'s value (%s) is smaller than in a previous level</string>
     <string name = "kiAccReduction">-a ki accumulation\'s value (%s) is smaller than in a previous level</string>
+    <string name = "zeonPointReduction">-points in Zeon Points is smaller than in a previous level</string>
+    <string name = "zeonAccReduction">-points in Magic Accumulation is smaller than in a previous level</string>
+    <string name = "zeonProjReduction">-points in Magic Projection is smaller than in a previous level</string>
 </resources>
