SBL Magic Levels -implement SBL character's acquisition of magic levels -update how all books are acquired

--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -136,4 +136,5 @@
     <string name = "zeonPointReduction">-points in Zeon Points is smaller than in a previous level</string>
     <string name = "zeonAccReduction">-points in Magic Accumulation is smaller than in a previous level</string>
     <string name = "zeonProjReduction">-points in Magic Projection is smaller than in a previous level</string>
+    <string name = "bookLevelReduction">-levels of %s Book are smaller than in a previous level</string>
 </resources>
