Implement SBL Psychic Power Enhancement -implement SBL growth for enhancing psychic powers

--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -142,4 +142,5 @@
     <string name = "psychicProjectionReduction">-points in Psychic Projection are smaller than in a previous level</string>
     <string name = "psyInnateSlotReduction">-points in Psychic Innate Slots are smaller than in a previous level</string>
     <string name = "overPsyPointFailure">-too many Psychic Points have been spent</string>
+    <string name = "psyPowerEnhancementReduction">-psychic points spent for enhancing the %s power is smaller than in a previous level</string>
 </resources>
