--- a/app/src/main/res/values/charStrings.xml
+++ b/app/src/main/res/values/charStrings.xml
@@ -138,6 +138,7 @@
     <string name = "zeonAccReduction">-points in Magic Accumulation is smaller than in a previous level</string>
     <string name = "zeonProjReduction">-points in Magic Projection is smaller than in a previous level</string>
     <string name = "bookLevelReduction">-levels of %s Book are smaller than in a previous level</string>
+    <string name = "bookLevelsExceeded">-too many book level points have been spent</string>
     <string name = "psychicPotentialReduction">-points in Psychic Potential are smaller than in a previous level</string>
     <string name = "psychicPointReduction">-points for Psychic Points are smaller than in a previous level</string>
     <string name = "psychicProjectionReduction">-points in Psychic Projection are smaller than in a previous level</string>
