--- a/app/src/main/res/values/essenceSpellData.xml
+++ b/app/src/main/res/values/essenceSpellData.xml
@@ -21,7 +21,7 @@
     <string name = "healingEff">+5% Life Points</string>
 
     <string name = "soulBarrier">Soul Barrier</string>
-    <string name = "soulBarrierDesc">This spell creates a barrier that stops all Spiritual attacks affecting supernatural Resistances. In other words, the shield can be used to stop attacks that would force the caster to roll for MR or PhR. It is not capable of stopping attacks that cause damage with added effects, such as Rain of Destruction. The shield itself does not have Life Points, since it does not protect against damaging impacts. The barrier cannot stop attacks that require a Resistance Check of 120 or higher.</string>
+    <string name = "soulBarrierDesc">This spell creates a barrier that stops all Spiritual attacks affecting supernatural Resistances. In other words, the shield can be used to stop attacks that would force the caster to roll for MR or PsR. It is not capable of stopping attacks that cause damage with added effects, such as Rain of Destruction. The shield itself does not have Life Points, since it does not protect against damaging impacts. The barrier cannot stop attacks that require a Resistance Check of 120 or higher.</string>
     <string name = "soulBarrierEff">+5 to the value of Resistances that can be stopped</string>
 
     <string name = "shareSense">Share Senses</string>
